# refactoring-python-samples

./: .gitignore  LICENSE  README.md  pyproject.toml
samples/ch01/: README.md
samples/ch01/listing1/: helper.py  performance_calculator.py  statement.before.py  statement.py  statement_arg.py  typings.py
