[tool.poetry]
name = "refactoring-python-samples"
version = "0.1.0"
description = "Refactoring 2nd edition example code samples written in python."
authors = ["huangkai <h1770360848@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
dacite = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "6.2"
pytest-benchmark = {version = "3.2.2", extras = ["histogram"]}
mypy = "^0.961"
pytest-mypy = "^0.9.1"
coverage = "5.3.1"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
target-version = ['py39']
skip-string-normalization = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
disallow_untyped_defs = true

[[tool.poetry.source]]
name = "tsinghua"
default = true
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
